<resources>
    <string name="app_name" translatable="false">ngebola</string>
    <string name="title_home">Home</string>
    <string name="title_league">League</string>
    <string name="title_team">Team</string>
    <string name="title_profile">Profile</string>
    <string name="name_label">Name</string>
    <string name="curr_lang">Language</string>
    <string name="stopwatch" translatable="false">Stopwatch</string>
    <string name="start" translatable="false">Start</string>
    <string name="pause" translatable="false">Pause</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="name_input_placeholder">Input your name</string>
    <string name="age_input_placeholder">Input your age</string>
    <string name="category">Category</string>
    <string name="next">Next</string>
    <string name="liverpool_team" translatable="false">Liverpool</string>
    <string name="real_madrid_team" translatable="false">Real Madrid</string>
    <string name="epl_league" translatable="false">Premier League</string>
    <string name="la_liga_league" translatable="false">La Liga</string>
    <string name="salah_player" translatable="false">M. Salah</string>
    <string name="son_player" translatable="false">Eden Hazard</string>
    <string name="standing_text">Standing</string>

    <string name="choose_photo">Choose photo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="league_name_descriptor">League Name</string>
    <string name="league_country_descriptor">Country</string>
    <string name="league_season_descriptor">League Name</string>
    <string name="rank_placeholder" translatable="false">R</string>
    <string name="team_name_standing">Team</string>
    <string name="win_placeholder" translatable="false">W</string>
    <string name="draw_placeholder" translatable="false">D</string>
    <string name="lose_placeholder" translatable="false">L</string>
    <string name="gf_placeholder" translatable="false">GF</string>
    <string name="ga_placeholder" translatable="false">GA</string>
    <string name="gd_placeholder" translatable="false">GD</string>
    <string name="point_placeholder" translatable="false">P</string>
    <string name="see_stat_btn">See Statistic</string>
    <string name="nationality">Nationality</string>
    <string name="notification_title">Top Of The Morning!</string>
    <string name="notification_text">Check standing\'s update here!</string>
    <string name="season_holder">Season</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>