<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stopwatch.StopwatchFragment">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/start_button"
            android:layout_marginBottom="32dp"
            android:layout_above="@+id/pause_button"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:id="@+id/pause_button"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/start_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/reset_button"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/pause_button"
            android:layout_alignStart="@+id/pause_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/time_View"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="56sp"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>